--- a/binpack2d.cabal
+++ b/binpack2d.cabal
@@ -32,6 +32,7 @@ flag debug-exe
 library
   ghc-options:         -Wno-tabs
   exposed-modules:     Data.BinPack2D
+                     , Data.BinPack2D.Util
   build-depends:       base >= 4.12.0.0 && < 5
                      , containers >= 0.6.0.1 && < 1
                      , vector >= 0.12.0.3 && < 1
